--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
     <head>
         <title>To Do List</title>
-        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <h1>To Do List</h1>
-    <button type="button">Add</button>
+        <h2>This is a basic to do list<h2>
+
+        <button type="button" onclick="document.getElementById('addListItem').innerHTML">Add</button>
+
         <script src="index.js"></script>
     </body>
 
