--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
         <h1>To Do List</h1>
         <h2>This is a basic to do list<h2>
 
-        <button type="button" onclick="document.getElementById('addListItem').innerHTML">Add</button>
+        <button type="button" onclick="addListItem()">Add List Item</button>
+        
+        <div id="listdiv">
+        </div>
+
+        
 
         <script src="index.js"></script>
+        <script src="item.js"></script>
     </body>
 
 </html>
